--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,5 @@
 {
   "logo": "MyFintech",
-  "title": "Banking without borders"
+  "title": "Banking without borders",
+  "getStarted": "Get Started Today"
 }
