--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -1,4 +1,5 @@
 {
   "logo": "МійФінтек",
-  "title": "Банкінг без кордонів"
+  "title": "Банкінг без кордонів",
+  "getStarted": "Почніть сьогодні"
 }
