updated faqs section

--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -1,5 +1,5 @@
 {
   "logo": "МійФінтек",
-  "title": "Банкінг без кордонів",
-  "getStarted": "Почніть сьогодні"
+  "title": "Banking without borders",
+  "getStarted": "Get Started Today"
 }
